force-app/main/default/objects/BusinessSettings__c/BusinessSettings__c.object-meta.xml
<CustomObject>
    <label>Configurações de Negócio</label>
    <nameField>
        <label>Configurações de Negócio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurações de Negócio</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>