force-app/main/default/objects/BusinessSettings__c/fields/GreenLightTimeout__c.field-meta.xml
<CustomField>
    <fullName>GreenLightTimeout__c</fullName>
    <label>Tempo limite para farol verde</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>