force-app/main/default/objects/BusinessSettings__c/fields/LeadRedirectionStep__c.field-meta.xml
<CustomField>
    <fullName>LeadRedirectionStep__c</fullName>
    <label>Fase para redirecionamento do Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agendamento de Visita</fullName>
            </value>
            <value>
                <fullName>Contato Realizado</fullName>
            </value>
            <value>
                <fullName>Conversão</fullName>
            </value>
            <value>
                <fullName>Descartado</fullName>
            </value>
            <value>
                <fullName>Lead Perdido</fullName>
            </value>
            <value>
                <fullName>Novo</fullName>
            </value>
            <value>
                <fullName>Nutrindo</fullName>
            </value>
            <value>
                <fullName>Qualificação</fullName>
            </value>
            <value>
                <fullName>Tentativa de contato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>