force-app/main/default/objects/BusinessSettings__c/fields/RedLightTimeout__c.field-meta.xml
<CustomField>
    <fullName>RedLightTimeout__c</fullName>
    <label>Tempo limite para farol vermelho</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>