force-app/main/default/objects/BusinessSettings__c/fields/SlaTime__c.field-meta.xml
<CustomField>
    <fullName>SlaTime__c</fullName>
    <label>Tempo de sla</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>