force-app/main/default/objects/BusinessSettings__c/fields/YellowLightTimeout__c.field-meta.xml
<CustomField>
    <fullName>YellowLightTimeout__c</fullName>
    <label>Tempo limite para farol amarelo</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>