force-app/main/default/objects/BusinessSettings__c/recordTypes/SlaControl.recordType-meta.xml
<RecordType>
    <fullName>SlaControl</fullName>
    <active>true</active>
    <label>Controle SLA</label>
</RecordType>