force-app/main/default/objects/BusinessSettings__c/listViews/SlaControl.listView-meta.xml
<ListView>
    <fullName>SlaControl</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Step__c</field>
        <operation>equals</operation>
        <value>Descartado,Não trabalhado,Novo,Nutrindo,Tentativa de contato,Contato realizado,Agendamento de visita,Qualificação</value>
    </filters>
    <filters>
        <field>LeadRedirectionStep__c</field>
        <operation>equals</operation>
        <value>Agendamento de Visita,Contato Realizado,Conversão,Descartado,Lead Perdido,Novo,Nutrindo,Qualificação,Tentativa de contato</value>
    </filters>
    <label>Controle SLA</label>
</ListView>